# OptiBus-PWA

./: .dockerignore  .env.example  .gitignore  Caddyfile  LICENSE  Makefile  README.md  compose.yaml  deploy.sh  lint_output.txt  prometheus.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  tests.yml
backend/: .dockerignore  Dockerfile  admin.py  auth_routes.py  auth_utils.py  b2b_middleware.py  b2b_routes.py  b2g_middleware.py  b2g_routes.py  batch_clean_gpx.py  config.py  database.py  gps_cleaner.py  gps_routes.py  ingest_gpx.py  ingest_stops.py  main.py  models.py  rate_limiter.py  requirements.txt  route_routes.py  ruta_ejemplo.gpx  simulator.py  test_api.py  ws_manager.py
backend/data/: paradas_SantoDomingooo_20260530_021310.json  paradas_SantoDomingooo_20260530_161622.json  paradas_ejemplo.json  ruta_SantoDomingooo_20260530_021310.gpx  ruta_SantoDomingooo_20260530_161622.gpx
backend/tests/: conftest.py  test_gps_cleaner.py  test_routes.py
docs/: CONFIGURACION.md  README.md  api-reference.md  architecture.md  database.md  deployment.md  development.md  mobile-app.md  troubleshooting.md
frontend/: app.js  driver.html  driver.js  i18n.js  index.html  manifest.json  robots.txt  sitemap.xml  style.css  sw.js
mobile-driver/: Dockerfile.build  README.md  keystore.properties.template  optibus-release-key.jks  settings.gradle.kts
scripts/: add_headers.sh  backup-db-encrypted.sh  backup-db.sh  batch_clean_gpx.py  fix_db_b2b.sh  generate_env.sh  migrate_multi_tenant.py  restore-db.sh  seed_db.sh  setup_host.sh
(+14 files in other folders)
