[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.ruff.lint]
ignore = ["E501"]  # Line too long handled by formatter

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[project]
name = "optibus-pwa"
version = "0.4.0"
description = "Real-time bus tracking PWA with GPS telemetry"
requires-python = ">=3.13"
license = {text = "AGPL-3.0"}