[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[project]
name = "optibus-pwa"
version = "0.5.1"
description = "Real-time bus tracking PWA with GPS telemetry"
requires-python = ">=3.13"
license = {text = "AGPL-3.0"}

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "ruff>=0.15.20",
]
